--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
 $5 + 10 CHF = $10 if rate 2:1
-• $5 * 2 = $10 (feito)
+• $5 * 2 = $10 (feito S12)
 Fazer 'amount' private
-Dollar side-effects?
+Dollar side-effects? (feito S13)
 Arredondamento de Dinheiro/float
+equals() (feito S13)
