--- a/todo
+++ b/todo
@@ -7,5 +7,5 @@ equals()
 • Francs are obsolete! (feito S14)
 Equals nulls
 • 5 EUR * 2 = 10 EUR (feito S14)
-Compare Euros with Dollars
+• Compare Euros with Dollars (feito S14)
 Common times
