--- a/todo
+++ b/todo
@@ -9,3 +9,5 @@ Equals nulls
 • 5 EUR * 2 = 10 EUR (feito S14)
 • Compare Euros with Dollars (feito S14)
 Common times
+Currency?
+Fazer 'currency' private
