--- a/todo
+++ b/todo
@@ -1,11 +1,12 @@
-------------------------- S15 -------------------------------------
-$5 + 10 EUR = $10 if rate 2:1
-$5 + $5 = $10 
+------------------------- S15 / S16 -------------------------------------
+$5 + 10 EUR = $10 if rate 2:1 (feito S16)
+$5 + $5 = $10 (feito S16) 
 Return Money from $5 + $5
 Bank.reduce(Money) (feito S15)
-reduce Money with conversion 
-Reduce(Bank, String)
-
+reduce Money with conversion (feito S16)    
+Reduce(Bank, String) (feito S16)
+Sum.plus (feito S16)
+Expression.times (feito S16)
 
 
 
